--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <body class="page">
     <header class="header">
       <nav class="theme-menu header__theme-menu">
+        <p class="header__title">&lt;/HTML&gt;</p>
+        <h1 class="header__subtitle">Закрывающий тег</h1>
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
